--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,10 +1,15 @@
-<h1>New Company</h1>
-<%= form_with model: @company do |f| %>
-  <div>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
-  <div>
-    <%= f.submit 'Create Company' %>
-  </div>
-<% end %>
+<div class="container mt-4">
+  <h3 class="mb-4">New Company</h3>
+
+  <%= form_with model: @company, local: true, class: 'needs-validation' do |f| %>
+    <div class="form-group">
+      <%= f.label :name, class: 'form-label' %>
+      <%= f.text_field :name, class: 'form-control', required: true %>
+    </div>
+    <br>
+    <div>
+      <%= f.submit 'Create Company', class: 'btn btn-primary' %>
+    </div>
+  <% end %>
+</div>
+
