--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -1,10 +1,14 @@
-<h1>New Employee for <%= @company.name %></h1>
-<%= form_with model: [@company, @employee] do |f| %>
-  <div>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
-  <div>
-    <%= f.submit 'Create Employee' %>
-  </div>
-<% end %>
+<div class="container mt-4">
+  <h3 class="mb-4">New Employee for <%= @company.name %></h3>
+
+  <%= form_with model: [@company, @employee], local: true, class: 'needs-validation' do |f| %>
+    <div class="form-group">
+      <%= f.label :name, class: 'form-label' %>
+      <%= f.text_field :name, class: 'form-control', required: true %>
+    </div>
+    <br>
+    <div>
+      <%= f.submit 'Create Employee', class: 'btn btn-primary' %>
+    </div>
+  <% end %>
+</div>
