added images logo and styling to the pages

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,29 +1,31 @@
-<div class="container mt-4">
-  <h3 class="mb-4">Companies</h3>
-  <%= link_to 'New Company', new_company_path, class: 'btn btn-primary mb-3' %>
-
-  <div class="table-responsive">
-    <table class="table table-bordered table-striped">
-      <thead class="thead-dark">
-        <tr>
-          <th>Company Name</th>
-          <th>Employee Count</th>
-          <th>Reimbursement Total</th>
-          <th>Details</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @companies.each do |company| %>
+<div class="container-fluid">
+  <div class="container mt-4">
+    <h3 class="mb-4">Companies</h3>
+    <div class="table-responsive">
+      <table class="table table-bordered table-striped">
+        <thead class="thead-dark">
           <tr>
-            <td><%= link_to company.name, company_path(company), class: 'text-decoration-none' %></td>
-            <td><%= company.employee_count %></td>
-            <td><%= company.total_reimbursement_claims %></td>
-            <td>
-              <%= link_to 'View', company_path(company), class: 'btn btn-info btn-sm' %>
-            </td>
+            <th>Company Name</th>
+            <th>Employee Count</th>
+            <th>Reimbursement Total</th>
+            <th>Details</th>
           </tr>
-        <% end %>
-      </tbody>
-    </table>
+        </thead>
+        <tbody>
+          <% @companies.each do |company| %>
+            <tr>
+              <td><%= link_to company.name, company_path(company), class: 'text-decoration-none' %></td>
+              <td><%= company.employee_count %></td>
+              <td><%= company.total_reimbursement_claims %></td>
+              <td>
+                <%= link_to 'View', company_path(company), class: 'btn btn-info btn-sm' %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <br>
+    <%= link_to 'New Company', new_company_path, class: 'btn main-btn' %>
   </div>
 </div>
