--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -4,7 +4,7 @@
   <h3 class="mb-3">Reimbursement Claims</h3>
 
   <div class="mb-3">
-    <%= link_to 'Submit Reimbursement Claim', new_company_employee_reimbursement_path(@company, @employee), class: 'btn btn-primary me-2' %>
+    <%= link_to 'Submit Reimbursement Claim', new_company_employee_reimbursement_path(@company, @employee), class: 'btn main-btn' %>
     <%= link_to 'Back to Company', company_path(@company), class: 'btn btn-secondary' %>
   </div>
 
