--- a/app/views/reimbursements/new.html.erb
+++ b/app/views/reimbursements/new.html.erb
@@ -17,8 +17,8 @@
       <%= f.date_field :date_of_expenditure, class: 'form-control', required: true %>
     </div>
     
-    <div class="mb-3">
-      <%= f.submit "Submit Reimbursement", class: 'btn btn-primary' %>
+    <div class="mb-3 main-button">
+      <%= f.submit "Submit Reimbursement", class: 'btn main-btn' %>
     </div>
   <% end %>
 
