--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -8,7 +8,7 @@
     </div>
     <br>
     <div>
-      <%= f.submit 'Create Employee', class: 'btn btn-primary' %>
+      <%= f.submit 'Create Employee', class: 'btn main-btn' %>
     </div>
   <% end %>
 </div>
