--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,13 @@
   <%= stylesheet_link_tag 'https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' %>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">Reimbursement Portal</a>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f36;" >
+    <a class="navbar-brand" href="#"><img src="/reimbursement_logo.png"> </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
+    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="navbarNav">
+      <ul class="navbar-nav ml-auto navbar-elements">
         <% if user_signed_in? %>
           <li class="nav-item">
             <%= link_to 'Home', root_path, class: 'nav-link' %>
@@ -43,13 +43,8 @@
   </nav>
 
   <div class="container">
-    <% if notice %>
-      <p class="notice"><%= notice %></p>
-    <% end %>
-    <% if alert %>
-      <p class="alert"><%= alert %></p>
-    <% end %>
-
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <%= yield %>
   </div>
 </body>
